
* Release 1.2.0
	* Fixed Bug #2: Only require BDD for running tests